kubernetes/apps/sonarr/sonarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  hostnames:
    - sonarr.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          namespace: sonarr
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
